# fastest

./: .readthedocs.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
fastest/: main.py
fastest/templates/: func.tmpl
fastest/utils/: generators.py
tests/: test_generators.py
tests/test_example/: test_some_function.py
