[tool.poetry]
name = "fastest"
description = "Tests generator for fastapi applications"
version = "0.1.0"
license = "MIT"

authors = ["Oleg Bugaichuk"]

readme = "README.md"

repository = "https://github.com/OlegBugaichuk/fastest"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8"

wemake-python-styleguide = "^0.18"
flake8-pytest-style = "^1.6"

pytest = "^8.3"
pytest-cov = "^6.1"
pytest-randomly = "^3.15"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1"
sphinx-autodoc-typehints = "^1.25"
m2r2 = "^0.3"
tomli = "^2.0"
doc8 = "^1.0"


[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "fastest"
description = "Tests generator for fastapi applications"
version = "0.1.0"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Oleg Bugaichuk", email = "olegussek@gmail.com" },
]

[project.scripts]
fastest = "fastest.main:main"

[project.gui-scripts]
fastest = "fastest.main:main"

[project.urls]
Homepage = "https://fastest.readthedocs.io/ru/latest/"
Source = "https://github.com/OlegBugaichuk/fastest"
